# EZModpacker

./: .gitignore  Cargo.toml  LGPLv3_LICENSE.md  README.md  makefile
examples/: test1.modpackinfo
headers/: Def.hpp
installer/: EZInstaller.cpp  preprocessor.hpp
lib/: EZLib  EZLib.cpp  preprocessor.hpp
src/: ast.rs  debug.rs  file.rs  grammar.pest  lib.rs  main.rs  operations.rs  parser.rs
