[package]
name = "ezmodpacker"
version = "0.1.0"
authors = ["PPK <ath455756@gmail.com>"]
edition = "2018"
repository = "https://github.com/DaimaoPPK/EZModpacker"
license-file = "LGPLv3_LICENSE.md"
keywords = ["minecraft"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
downloader = "0.2.6"